k8s/ingress-controller/nginx-ingress-controller/app-v1-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-v1-ingress
  namespace: nginx-ingress-controller-ns
spec:
  ingressClassName: nginx
  rules:
    - host: app1.example.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-v1-service
                port:
                  number: 80
  tls:
    - hosts:
        - app1.example.local
      secretName: certificate-secret
